ASSERT failure in RenderLayer::computeRepaintRects https://bugs.webkit.org/show_bug.cgi?id=84480

Patch by Yong Li <yoli@rim.com> on 2012-04-24
Reviewed by Simon Fraser.

Source/WebCore:

Update visibility status if necessary before updating
compositing state in RenderLayer::styleChanged().

No new tests because this is obviously right thing to do
and creating new test seems too much for this small change.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::styleChanged):

LayoutTests:

Add a layout test for it.

* compositing/visibility/compositing-and-visibility-turned-off-together-expected.txt: Added.
* compositing/visibility/compositing-and-visibility-turned-off-together.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@115157 bbb929c8-8fbe-4397-9dbb-9b2b20218538